Tint story map background more, fix alignment of storylist

--- a/src/story-edit-view/passage-item/index.less
+++ b/src/story-edit-view/passage-item/index.less
@@ -12,6 +12,7 @@
 	border-radius: 2px;
 	width: 100px;
 	height: 100px;
+	overflow: hidden;
 
 	p {
 		margin: 0;
