--- a/src/story-list-view/index.less
+++ b/src/story-list-view/index.less
@@ -70,7 +70,6 @@
 
 		> ul {
 			display: flex;
-			justify-content: space-between;
 			flex-wrap: wrap;
 		}
 	}
